--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Secular+One&family=Tilt+Neon&family=Tilt+Warp&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,6 +8,10 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  scroll-behavior: smooth !important;
+  outline: none !important;
+  border: none !important;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,4 +30,51 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+@layer components {
+  .zoom-1 {
+    zoom: 1;
+  }
+}
+
+@font-face {
+  font-family: 'DiscordCodeBlock';
+  src: url(/Menlo-Regular.ttf);
+  src: url(/monaco.ttf);
+}
+
+.header_gradient {
+  z-index: 0;
+  left: -25px;
+  top: -20px;
+  position: absolute;
+  border-radius: 46%;
+  width: 650px;
+  height: 450px;
+  background-image: linear-gradient( -0.8rad, #bd34fe 50%, #47caff 50% );
+  filter: blur(72px);
+}
+
+.review_gradient {
+  z-index: 0;
+  bottom: -10px;
+  left: 40px;
+  position: absolute;
+  border-radius: 38%;
+  width: 480px;
+  height: 90px;
+  background-image: linear-gradient( -5.3rad, #8360c3 50%, #2ebf91 50% );
+  filter: blur(72px);
+}
+
+.chat_gradient {
+  z-index: 0;
+  position: absolute;
+  bottom: -20px;
+  border-radius: 21%;
+  width: 350px;
+  height: 280px;
+  background-image: linear-gradient( 8.42rad, #5C258D 50%, #4389A2 50%);
+  filter: blur(72px);
 }
